--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap");
+
 * {
   box-sizing: border-box;
 }
 body {
   margin: 0;
+  font-family: "Roboto Condensed", sans-serif;
 }
+
 .nav {
-  background-color: rgb(164, 163, 163);
+  background-color: rgb(247, 148, 72);
   color: white;
+  padding: 0 3rem;
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 2rem;
-  padding: 0 3rem;
-  font-size: 22px;
+  width: 1000px;
 }
 .nav ul {
   padding: 0;
   margin: 0;
   list-style: none;
   display: flex;
-  gap: 2rem;
+  gap: 3rem;
   inline-size: none;
 }
 .nav a {
@@ -31,6 +40,7 @@ body {
 }
 .logo {
   width: 200px;
+  display: flex;
 }
 .them {
   background-color: transparent;
@@ -45,4 +55,103 @@ body {
   margin-left: 10px;
   margin-top: 10px;
   cursor: pointer;
+}
+
+.book-img {
+  width: 700px;
+}
+.book-inside {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.media-txt {
+  color: rgb(44, 50, 130);
+  display: flex;
+  justify-content: center;
+  font-size: 80px;
+  margin-top: 10px;
+}
+.book-container {
+  background-color: rgb(164, 163, 163);
+  margin-top: -30px;
+}
+.action-one,
+.action-two,
+.action-three {
+  background-color: rgb(242, 241, 243);
+  width: 400px;
+  height: 400px;
+  border-radius: 80px;
+}
+.action-inside {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 200px;
+}
+.action-container {
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-top: 150px;
+}
+.action-inside {
+  border-radius: 100px;
+  background-color: rgb(164, 163, 163);
+  margin-top: 10px;
+}
+.action-inside {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.news-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 100px;
+  margin-top: 100px;
+}
+.news-line {
+  height: 2px;
+  background-color: rgb(10, 10, 10);
+  width: 77%;
+}
+.monday-line {
+  height: 2px;
+  background-color: rgb(10, 10, 10);
+  width: 150%;
+  margin-left: -40px;
+}
+.news-line1 {
+  display: flex;
+  gap: 100px;
+  flex-direction: column;
+  padding-top: 50px;
+}
+.week-line {
+  display: flex;
+  font-size: 50px;
+  gap: 120px;
+}
+.resurse-container {
+  background-color: rgb(164, 163, 163);
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 140px;
+}
+.resurse-txt {
+  font-size: 100px;
+}
+.foot-container {
+  background-color: #fff;
+  height: 250px;
+}
+.tbilisi-img {
+  width: 400px;
+}
+.foot-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
