--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nav {
-  background-color: rgb(247, 148, 72);
+  background-color: rgb(139, 185, 248);
   color: white;
   padding: 0 3rem;
   font-size: 22px;
@@ -32,7 +32,7 @@ body {
   inline-size: none;
 }
 .nav a {
-  color: inherit;
+  color: #0a0a0a;
   text-decoration: none !important;
 }
 .site-logo {
@@ -66,14 +66,14 @@ body {
   margin-top: 30px;
 }
 .media-txt {
-  color: rgb(44, 50, 130);
+  color: rgb(127, 176, 246);
   display: flex;
   justify-content: center;
   font-size: 80px;
   margin-top: 10px;
 }
 .book-container {
-  background-color: rgb(164, 163, 163);
+  /* background-color: rgb(164, 163, 163); */
   margin-top: -30px;
 }
 .action-one,
@@ -96,7 +96,7 @@ body {
 }
 .action-inside {
   border-radius: 100px;
-  background-color: rgb(164, 163, 163);
+  background-color: rgb(139, 185, 248);
   margin-top: 10px;
 }
 .action-inside {
@@ -154,4 +154,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 250px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+.ltxt {
+  font-size: 15px;
 }
