--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ body {
   font-size: 22px;
   display: flex;
   justify-content: center;
+  /* position: fixed; */
 }
 
 .nav-container {
@@ -79,10 +80,10 @@ body {
 .action-one,
 .action-two,
 .action-three {
-  background-color: rgb(242, 241, 243);
+  /* background-color: rgb(242, 241, 243);
   width: 400px;
   height: 400px;
-  border-radius: 80px;
+  border-radius: 80px; */
 }
 .action-inside {
   display: flex;
@@ -115,6 +116,9 @@ body {
   background-color: rgb(10, 10, 10);
   width: 77%;
 }
+.news-title {
+  font-size: 50px;
+}
 .monday-line {
   height: 2px;
   background-color: rgb(10, 10, 10);
@@ -141,7 +145,7 @@ body {
   margin-top: 140px;
 }
 .resurse-txt {
-  font-size: 100px;
+  font-size: 50px;
 }
 .foot-container {
   background-color: #fff;
@@ -163,4 +167,36 @@ body {
 }
 .foot {
   display: flex;
+}
+.meeting-img {
+  display: flex;
+  width: 405px;
+  border-radius: 80px;
+}
+.training-img {
+  display: flex;
+  width: 405px;
+  border-radius: 80px;
+}
+.meeting-txt {
+  display: flex;
+  width: 400px;
+  padding-top: 30px;
+}
+.training-txt {
+  display: flex;
+  padding-top: 30px;
+}
+.download-btn {
+  width: 110px;
+  height: 40px;
+  border-radius: 10px;
+  border: none !important;
+  cursor: pointer;
+}
+.resurse {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
