--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,9 @@ body {
   color: #0a0a0a;
   text-decoration: none !important;
 }
+.nav a:hover {
+  font-size: 22px;
+}
 .site-logo {
   font-size: 50px;
 }
@@ -158,7 +161,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 250px;
+  height: 200px;
   padding-left: 150px;
   padding-right: 150px;
 }
@@ -187,18 +190,63 @@ body {
   display: flex;
   padding-top: 30px;
 }
-.download-btn {
-  width: 110px;
-  height: 40px;
+.download-btn1 {
+  display: flex;
   border-radius: 10px;
   border: none !important;
   cursor: pointer;
+  flex-direction: column;
+  gap: 20px;
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(70, 138, 232);
+  font-size: 20px;
+  margin-left: 47px;
+}
+.download-btn2 {
+  display: flex;
+  border-radius: 10px;
+  border: none !important;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 20px;
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(70, 138, 232);
+  font-size: 20px;
+  margin-left: -23px;
+}
+.download-btn3 {
+  display: flex;
+  border-radius: 10px;
+  border: none !important;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 20px;
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(70, 138, 232);
+  font-size: 20px;
+  margin-left: 9px;
+}
+.dwn-download,
+.dwn3-download,
+.dwn2-download {
+  text-decoration: none;
+  color: #fff;
 }
 .resurse {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  align-items: flex-start;
+  gap: 21px;
 }
 .news-image {
   width: 400px;
@@ -213,4 +261,25 @@ body {
   display: flex;
   gap: 100px;
   padding-top: 50px;
+}
+.Take-action:hover {
+  color: red;
+}
+.propaganda-txt {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 38px;
+}
+.th3 {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 38px;
+}
+.five-txt,
+.fake-txt,
+.propaganda-txt {
+  color: #fff;
+  font-size: 22px;
 }
