--- a/src/styles.css
+++ b/src/styles.css
@@ -54,11 +54,13 @@ body {
   display: flex;
   align-items: flex-end;
   margin-top: -7px;
+  gap: -13px;
 }
 .moon {
-  margin-left: 10px;
+  margin-left: -30px;
   margin-top: 10px;
   cursor: pointer;
+  width: 100px;
 }
 
 .book-img {
@@ -282,4 +284,10 @@ body {
 .propaganda-txt {
   color: #fff;
   font-size: 22px;
+}
+.icons {
+  background-color: #0a0a0a;
+}
+.icons-container {
+  width: 100px;
 }
